# simply-simplify-language_api

./: .env.example  .gitignore  LICENSE.txt  README.md  _gh.code-workspace  config.py  config.yaml  fastapi_app.py  logger.py  pyproject.toml  requirements.txt  simplify_language.ipynb  test_api.py
converter/: DataConverter.py  JsonConverter.py  TextConverter.py  bad_formatting_error.py  data_converter.py
model/: StructuredData.py  TextPayload.py  structured_data.py
simplifier/: core.py  utils_prompts.py
tests/: conftest.py  feature_test.py  json_test.py  test.py  test_api.py  test_config.py  text_test.py  texttest.py  unittest.py
