[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simply-simplify-language_api"
version = "0.3.0"
description = 'Simple Simplify German Language - API version'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"


authors = [
  { name = "Statistisches Amt Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
]

dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.58.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "jsonpath-ng>=1.7.0",
    "pydantic>=2.10.5",
    "requests>=2.32.5",
]

[tool.hatch]
version = "0.3.0"

[tool.hatch.build.targets.wheel]
packages = ["converter", "model", "simplifier"]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Ignore line length errors (especially for long strings/comments)
