[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simply-simplify-language_api"
version = "0.3.0"
description = 'Simple Simplify German Language - API version'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"


authors = [
  { name = "Statistisches Amt Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
]

dependencies = [
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
    "fastapi>=0.135.1",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.uv]
exclude-newer = "7 days"

[tool.hatch]
version = "0.3.0"

[tool.hatch.build.targets.wheel]
packages = ["converter", "model", "simplifier"]

[tool.hatch.build.targets.wheel.force-include]
"config.py" = "config.py"
"config.yaml" = "config.yaml"
"fastapi_app.py" = "fastapi_app.py"
"logger.py" = "logger.py"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Ignore line length errors (especially for long strings/comments)
